<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="30dp">

  <TextView
    style="@style/AppTheme.TextViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textview_1"
    android:textSize="23dp"/>

  <TextView
    style="@style/AppTheme.TextViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textview_2"
    android:textColor="@color/green"
    android:background="@color/black"
    android:textSize="23dp"/>

  <TextView
    style="@style/AppTheme.TextViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textview_3"
    android:textColor="@color/red"
    android:textStyle="bold"
    android:textSize="23dp"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/AppTheme.TextViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="23dp"
    android:text="@string/textview_4"
    app:fontFamily="@font/caladea_bold" />

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/AppTheme.TextViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corners"
    android:textSize="23dp"
    android:text="@string/text_view_5"
    app:fontFamily="@font/caladea_bold" />

</LinearLayout>